Respect --no-sandbox flag for V2 sandbox.

Bug: 753907
Change-Id: I1175bc139f19c349199a1ef91426e747955c7d0b
Reviewed-on: https://chromium-review.googlesource.com/612114
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Commit-Queue: Greg Kerr <kerrnel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494126}
Former-commit-id: abb12b1c5cf6180880a9e5668968c6e11905c78d